# FL-NIDS

./: .gitignore  README.md
Centralized/: pyproject.toml
cCentralized/: main.py
centralized/: .gitignore  centralized_report.txt  main.py  pyproject.toml
centralized/legacy/: report_r3.txt  report_r7.txt  report_r9.txt
centralized/reports/: report_1.txt  report_2.txt  report_3_servers_25p.txt  report_sub_dataset.txt  report_subset.txt
data_analysis/: .gitignore  README.md  data.ipynb  pyproject.toml
federated/: .gitignore  README.md  eval_federated.py  federated_report_1.txt  federated_report_2.txt  gen_diagnostic_plot_global.py  gen_diagnostics_plots.py  gen_eval_clients.py  gen_eval_federated.py  gen_metrics_graphs.py  gen_tSNE_clients.py  gen_tSNE_server.py  main.py  project.yml  pyproject.toml  t-SNE.py
federated/diagnostics_plots/: diagnostics_report.txt
federated/diagnostics_plots/r10/: diagnostics_report.txt
federated/diagnostics_plots/r11/: diagnostics_report.txt
federated/diagnostics_plots/r8/: diagnostic_report.txt
federated/jobs/nids_fedavg/: meta.json
federated/legacy_runs/server/: notes.txt
federated/poc_workspace/: project.yml
federated/reports/: report_0.txt  report_0_servers_25p.txt  report_1.txt  report_clients_0.txt
federated/reports/r10/: report_0.txt  report_clients_0.txt  stats.txt
federated/reports/r11/: report_0.txt  report_clients_0.txt  stats.txt
federated/reports/r8/: report_0.txt  report_clients_0.txt  stats.txt
federated_dp/: README.md  dp_noise_calibrator.py  dp_noise_estimator.py  gen_diagnostic_plot_global.py  gen_eval_federated.py  gen_metrics_graphs.py  gen_tSNE_clients.py  noise_calculator.py  pyproject.toml
federated_dp/materials/: INSTRUCTIONS.md  budget_tracker.py  config_fed_client.json  dp_gaussian_filter.py  dp_noise_calibrator.py
federated_dp/paper_graphs/: 2clip.csv  dp.csv  dp_data_parser.py  dp_plot_generator.py  trade_off_plot.py
federated_dp/reports/: report_0.txt
federated_dp/reports/010o/: report_0.txt
federated_dp/reports/012o/: report_0.txt  stats.txt
federated_hard/: gen_tSNE_clients.py
federated_he/: .gitignore  README.md  gen_config.py  gen_diagnostic_plot_global.py  gen_eval_federated.py  gen_metrics_graphs.py  gen_tSNE_clients.py  gen_tSNE_server.py  project.yml  pyproject.toml
federated_he/diagnostics_plots/r2/: diagnostics_report.txt
federated_he/diagnostics_plots/r3/: diagnostics_report.txt
federated_he/jobs/nids_fedavg/app/config/: config_fed_server.json
federated_he/jobs/nids_fedavg/app/custom/: comm_stats.py  nids_data_loader.py  nids_trainer.py
federated_he/reports/: report_0.txt
federated_he/reports/r1/: report_0.txt  report_clients_0.txt  stats.txt
federated_he/reports/r2/: report_0.txt  report_clients_0.txt  stats.txt
federated_he/reports/r3/: report_0.txt  report_clients_0.txt  stats.txt
federated_he_new/: README.md  gen_diagnostics_plots.py  gen_eval_clients.py  gen_eval_federated.py  gen_tSNE_server.py  pyproject.toml
paper/: main.tex  references.bib
(+130 files in other folders)
