[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "fastparquet>=2026.3.0",
    "networkx>=3.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "python-louvain>=0.16",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
